--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- General options --- #
 
 # Name of website
-title: About Me
+title: Trenton Wagner
 
 # Short description of your site
 description: A timeline of me.
